--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,115 @@
 
     <groupId>groupId</groupId>
     <artifactId>SIFTTestTask</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.1.1</version>
 
     <properties>
+        <jdkVersion>1.8</jdkVersion>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <product.company>VictorGavrilenko</product.company>
+        <product.title>MergeSorting</product.title>
+        <exeFileName>sort-it</exeFileName>
     </properties>
-    
+
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.akathist.maven.plugins.launch4j</groupId>
+            <artifactId>launch4j-maven-plugin</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>plugin-loader</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <outfile>${exeFileName}.exe</outfile>
+                            <jar>target/${project.artifactId}.jar</jar>
+                            <errTitle>${product.title}</errTitle>
+                            <classPath>
+                                <mainClass>MergeSorting</mainClass>
+                                <addDependencies>true</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            <jre>
+                                <path>../jre</path>
+                                <minVersion>
+                                    ${jdkVersion}
+                                </minVersion>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>
+                                    ${project.version}
+                                </fileVersion>
+                                <txtFileVersion>
+                                    ${project.version}
+                                </txtFileVersion>
+                                <fileDescription>
+                                    Sort application
+                                </fileDescription>
+                                <copyright>
+                                    Copyright © 2011 ${product.company}
+                                </copyright>
+                                <productVersion>
+                                    ${project.version}
+                                </productVersion>
+                                <txtProductVersion>
+                                    ${project.version}
+                                </txtProductVersion>
+                                <companyName>
+                                    ${product.company}
+                                </companyName>
+                                <productName>
+                                    ${product.title}
+                                </productName>
+                                <internalName>
+                                    ${exeFileName}
+                                </internalName>
+                                <originalFilename>
+                                    ${exeFileName}.exe
+                                </originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!--    <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <classpathPrefix>lib/</classpathPrefix>
+                                <mainClass>MergeSorting</mainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>-->
 </project>
