--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>groupId</groupId>
     <artifactId>SIFTTestTask</artifactId>
+    <packaging>jar</packaging>
     <version>1.1.1.1</version>
 
     <properties>
-        <jdkVersion>1.8</jdkVersion>
+        <jdkVersion>1.17</jdkVersion>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <product.company>VictorGavrilenko</product.company>
@@ -29,10 +30,14 @@
             <artifactId>launch4j-maven-plugin</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
@@ -47,7 +52,7 @@
                         <configuration>
                             <headerType>console</headerType>
                             <outfile>${exeFileName}.exe</outfile>
-                            <jar>target/${project.artifactId}.jar</jar>
+                            <jar>target/${project.artifactId}-${project.version}.jar</jar>
                             <errTitle>${product.title}</errTitle>
                             <classPath>
                                 <mainClass>MergeSorting</mainClass>
@@ -61,36 +66,14 @@
                                 </minVersion>
                             </jre>
                             <versionInfo>
-                                <fileVersion>
-                                    ${project.version}
-                                </fileVersion>
-                                <txtFileVersion>
-                                    ${project.version}
-                                </txtFileVersion>
-                                <fileDescription>
-                                    Sort application
-                                </fileDescription>
-                                <copyright>
-                                    Copyright © 2011 ${product.company}
-                                </copyright>
-                                <productVersion>
-                                    ${project.version}
-                                </productVersion>
-                                <txtProductVersion>
-                                    ${project.version}
-                                </txtProductVersion>
-                                <companyName>
-                                    ${product.company}
-                                </companyName>
-                                <productName>
-                                    ${product.title}
-                                </productName>
-                                <internalName>
-                                    ${exeFileName}
-                                </internalName>
-                                <originalFilename>
-                                    ${exeFileName}.exe
-                                </originalFilename>
+                                <fileVersion>${project.version}</fileVersion>
+                                <fileDescription>Sort application</fileDescription>
+                                <copyright>My copyright</copyright>
+                                <productVersion>${project.version}</productVersion>
+                                <companyName>${product.company}</companyName>
+                                <productName>${product.title}</productName>
+                                <internalName>${exeFileName}</internalName>
+                                <originalFilename>${exeFileName}.exe</originalFilename>
                             </versionInfo>
                         </configuration>
                     </execution>
@@ -98,23 +81,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <!--    <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.1.0</version>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <addClasspath>true</addClasspath>
-                                <classpathPrefix>lib/</classpathPrefix>
-                                <mainClass>MergeSorting</mainClass>
-                            </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>-->
 </project>
